# chess_opening

./: CMakeLists.txt  chess_backend.uml  libfont.suppr  memcheck
src/: CMakeLists.txt  main.cpp
src/chess/: CMakeLists.txt  boardstate.cpp  boardstate.h  boardutility.h  chess.cpp  chess.h  game.cpp  game.h  move.cpp  move.h
src/chess_logic/: CMakeLists.txt  boardstate.cpp  boardstate.h  game.cpp  game.h  move.cpp  move.h  piece.h  tile.cpp  tile.h
src/chess_logic_exe/: CMakeLists.txt  main.cpp
src/chess_test/: CMakeLists.txt  test.cpp
src/gui/: CMakeLists.txt  chessboard.cpp  chessboard.h  chessboard.ui  mainwindow.cpp  mainwindow.h  tile.cpp  tile.h
src/opening_gui/: CMakeLists.txt  chessboard.cpp  chessboard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tile.cpp  tile.h
src/opening_gui_exe/: CMakeLists.txt  main.cpp
